# logo-generator

./: COPYING.md  Makefile  Makefile.in  README.md  colored_triangle.c  configure  configure.ac  include.h  logo-generator  logo-generator-2_2-1_amd64.deb  logo-generator-man.1  logo-generator-v2.0-test2_2-1_amd64.deb  main.c  options.c  outlined_triangle.c
docs/GraphViz/: options-all_imgs.dot  options-outlined_all.dot  options-outlined_nologo.dot  options.dot
src/: Makefile.am  Makefile.in  main.c  options.c
