# Started from the bottom now we're here
# Started from the bottom now my whole team fucking here
# Started from the bottom now we're here
# Started from the bottom now the whole team here, nigga
# Started from the bottom now we're here
# Started from the bottom now my whole team here, nigga
# Started from the bottom now we're here
# Started from the bottom now the whole team fucking here

bin_PROGRAMS = $(top_builddir)/logogenerator
__top_builddir__logogenerator_SOURCES = main.c options.c colored_triangle.c join_triangles.c outlined_triangle.c include.h
__top_builddir__logogenerator_CFLAGS = `pkg-config --cflags gtk+-3.0 cairo` 
__top_builddir__logogenerator_LDFLAGS = `pkg-config --libs gtk+-3.0 cairo` 

